[package]
name = "pingmole"
version = "0.1.0"
description = "Simple CLI that helps to filter and pick the closest Mullvad server."
authors = ["Vladislav Mamon <hello@vm.codes>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
panic = "abort"
debug = false
