[package]
name = "pingmole"
version = "0.1.0"
description = "Simple CLI that helps to filter and pick the closest Mullvad server."
authors = ["Vladislav Mamon <hello@vm.codes>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
indicatif = "0.17.8"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }

[profile.release]
lto = "thin"
panic = "abort"
debug = false
